Source/WebKit/UIProcess/Cocoa/ModelElementControllerCocoa.mm
@@ -152,7 +152,7 @@ ASVInlinePreview * ModelElementController::previewForModelIdentifier(ModelIdenti
     return m_inlinePreviews.get(modelIdentifier.uuid).get();
 }
 
-void ModelElementController::modelElementDidCreatePreview(URL fileURL, String uuid, WebCore::FloatSize size, CompletionHandler<void(Expected<std::pair<String, uint32_t>, WebCore::ResourceError>)>&& completionHandler)
+void ModelElementController::modelElementCreateRemotePreview(String uuid, WebCore::FloatSize size, CompletionHandler<void(Expected<std::pair<String, uint32_t>, WebCore::ResourceError>)>&& completionHandler)
 {
     if (!m_webPageProxy.preferences().modelElementEnabled()) {
         completionHandler(makeUnexpected(WebCore::ResourceError { WebCore::errorDomainWebKitInternal, 0, { }, "Model element disabled"_s }));
@@ -170,15 +170,12 @@ void ModelElementController::modelElementDidCreatePreview(URL fileURL, String uu
     else
         iterator->value = preview;
 
-    // FIXME: Why is this not just using normal URL -> NSURL conversion?
-    auto url = adoptNS([[NSURL alloc] initFileURLWithPath:fileURL.fileSystemPath()]);
-
-    auto handler = CompletionHandlerWithFinalizer<void(Expected<std::pair<String, uint32_t>, WebCore::ResourceError>)>(WTFMove(completionHandler), [url] (Function<void(Expected<std::pair<String, uint32_t>, WebCore::ResourceError>)>& completionHandler) {
+    auto handler = CompletionHandlerWithFinalizer<void(Expected<std::pair<String, uint32_t>, WebCore::ResourceError>)>(WTFMove(completionHandler), [] (Function<void(Expected<std::pair<String, uint32_t>, WebCore::ResourceError>)>& completionHandler) {
         completionHandler(makeUnexpected(WebCore::ResourceError { WebCore::ResourceError::Type::General }));
     });
 
     RELEASE_ASSERT(isMainRunLoop());
-    [preview setupRemoteConnectionWithCompletionHandler:makeBlockPtr([weakThis = WeakPtr { *this }, preview, uuid = WTFMove(uuid), url = WTFMove(url), handler = WTFMove(handler)] (NSError *contextError) mutable {
+    [preview setupRemoteConnectionWithCompletionHandler:makeBlockPtr([weakThis = WeakPtr { *this }, preview, uuid = WTFMove(uuid), handler = WTFMove(handler)] (NSError *contextError) mutable {
         if (contextError) {
             LOG(ModelElement, "Unable to create remote connection for uuid %s: %@.", uuid.utf8().data(), contextError.localizedDescription);
 
@@ -193,29 +190,53 @@ void ModelElementController::modelElementDidCreatePreview(URL fileURL, String uu
 
         LOG(ModelElement, "Established remote connection with UUID %s.", uuid.utf8().data());
 
-        [preview preparePreviewOfFileAtURL:url.get() completionHandler:makeBlockPtr([weakThis = WTFMove(weakThis), preview, uuid = WTFMove(uuid), url = WTFMove(url), handler = WTFMove(handler)] (NSError *loadError) mutable {
-            if (loadError) {
-                LOG(ModelElement, "Unable to load file for uuid %s: %@.", uuid.utf8().data(), loadError.localizedDescription);
-
-                callOnMainRunLoop([weakThis = WTFMove(weakThis), handler = WTFMove(handler), error = WebCore::ResourceError { loadError }] () mutable {
-                    if (!weakThis)
-                        return;
-
-                    handler(makeUnexpected(error));
-                });
+        auto contextId = [preview contextId];
+        callOnMainRunLoop([weakThis = WTFMove(weakThis), uuid = WTFMove(uuid), handler = WTFMove(handler), contextId] () mutable {
+            if (!weakThis)
                 return;
-            }
 
-            LOG(ModelElement, "Loaded file with UUID %s.", uuid.utf8().data());
+            handler(std::make_pair(uuid, contextId));
+        });
+    }).get()];
+}
 
-            auto contextId = [preview contextId];
-            callOnMainRunLoop([weakThis = WTFMove(weakThis), uuid = WTFMove(uuid), handler = WTFMove(handler), contextId] () mutable {
+void ModelElementController::modelElementLoadRemotePreview(String uuid, URL fileURL, CompletionHandler<void(std::optional<WebCore::ResourceError>&&)>&& completionHandler)
+{
+    if (!m_webPageProxy.preferences().modelElementEnabled()) {
+        completionHandler(WebCore::ResourceError { WebCore::errorDomainWebKitInternal, 0, { }, "Model element disabled"_s });
+        return;
+    }
+
+    auto preview = previewForUUID(uuid);
+    if (!preview)
+        completionHandler(WebCore::ResourceError { WebCore::errorDomainWebKitInternal, 0, { }, "Could not find a preview for the provided UUID"_s });
+
+    auto handler = CompletionHandlerWithFinalizer<void(std::optional<WebCore::ResourceError>&&)>(WTFMove(completionHandler), [](Function<void(std::optional<WebCore::ResourceError>&&)>& completionHandler) {
+        completionHandler(WebCore::ResourceError { WebCore::ResourceError::Type::General });
+    });
+
+    RELEASE_ASSERT(isMainRunLoop());
+    [preview preparePreviewOfFileAtURL:[[NSURL alloc] initFileURLWithPath:fileURL.fileSystemPath()] completionHandler:makeBlockPtr([weakThis = WeakPtr { *this }, uuid = WTFMove(uuid), handler = WTFMove(handler)] (NSError *loadError) mutable {
+        if (loadError) {
+            LOG(ModelElement, "Unable to load file for uuid %s: %@.", uuid.utf8().data(), loadError.localizedDescription);
+
+            callOnMainRunLoop([weakThis = WTFMove(weakThis), handler = WTFMove(handler), error = WebCore::ResourceError { loadError }] () mutable {
                 if (!weakThis)
                     return;
 
-                handler(std::make_pair(uuid, contextId));
+                handler(error);
             });
-        }).get()];
+            return;
+        }
+
+        LOG(ModelElement, "Loaded file with UUID %s.", uuid.utf8().data());
+
+        callOnMainRunLoop([weakThis = WTFMove(weakThis), handler = WTFMove(handler)] () mutable {
+            if (!weakThis)
+                return;
+
+            handler({ });
+        });
     }).get()];
 }
 
